# ITMO-System-Design

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
.github/workflows/: test.yml
cli/: executor.py  main.py  parser.py  presenter.py  reader.py  storage.py
cli/commands/: base_command.py  cat_command.py  cd_command.py  echo_command.py  exit_command.py  external_command.py  grep_command.py  ls_command.py  pwd_command.py  wc_command.py
docs/pydoq_templates/: class.txt  def.txt
docs/source/: cli.commands.rst  cli.rst  conf.py  index.rst
src/commands/: base_command.py  cat_command.py  echo_command.py  exit_command.py  external_command.py  pwd_command.py  wc_command.py
tests/: cat_test.py  echo_test.py  executor_test.py  exit_test.py  parser_test.py  presenter_test.py  pwd_test.py  reader_test.py  storage_test.py  wc_test.py
tests/commands_tests/: cat_test.py  cd_test.py  echo_test.py  exit_test.py  external_test.py  grep_test.py  ls_test.py  pwd_test.py  wc_test.py
