[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = [
  "Arseniy Brothers <arseniys@gmail.com>",
  "Mihail Frolov <m@mail.ru>",
  "Nikita Stepanov <nistepanovme@gmail.com>"
]
description = "Itmo Software Design"
name = "system"
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
requests = "^2.32.3"
uvicorn = "^0.31.1"

[tool.poetry.group.dev.dependencies]
async-asgi-testclient = "^1.4.11"
autodocsumm = "^0.2.13"
doq = "^0.10.0"
faker = "^30.0.0"
httpx = "^0.27.2"
mypy = "^1.11.2"
pre-commit = "^4.0.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.9"
sphinx = "^8.1.1"
sphinx-markdown-builder = "^0.6.7"
sphinx-rtd-theme = "^3.0.1"
toml-sort = "^0.23.1"

[tool.doq]
formatter = "google"
ignore_exception = true
ignore_init = true
ignore_yield = true
line_length = 72
single_line = true

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
ignore_errors = true
module = [
  "docs.*",
  "tests.*"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests/"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 72
preview = true
quote-style = "single"

[tool.ruff.lint]
ignore = ["D100", "D107"]
# enable docstring
select = ["D"]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["D", "PLR2004", "T201"]
"**/{docs}/*" = ["D", "PLR2004", "T201"]
"**/{tests}/*" = ["D", "PLR2004", "T201"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"
